Change into my own info

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Zyyo</title>
     <link rel="icon" href="/static/img/favicon.ico">
-    <meta name="description" content="整天半吊子和不学无术的坏孩子,梦想成为庄稼地里的读书人">
-    <meta name="keywords" content="zyyo,张扬YO,ZYYO,张扬主页,ZYYO引导页,zhangyang">
+    <meta name="description" content="不知大海之宽阔，却知晓天空之蓝( •̀ ω •́ )✧">
+    <meta name="keywords" content="Anka的主页">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://s1.hdslb.com/bfs/static/jinkela/long/font/regular.css">
     <link rel="stylesheet" href="/static/style.css?v=1">
@@ -33,7 +33,7 @@
 
             <div class="logo" style="background-image: url(/static/img/favicon.ico);"><img
                     style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"
-                    src="/static/img/logokuang.png" alt="头像框" title="博主 1月17日 在线"></div>
+                    src="/static/img/logokuang.png" alt="头像框" title="Anka的主页"></div>
 
             <div class="left-div left-des">
                 <div class="left-div-item">
@@ -60,6 +60,9 @@
             </div>
             <div class="left-div left-tag">
                 <div class="left-tag-item">
+                    添加Tags...
+                </div>
+<!--                 <div class="left-tag-item">
                     网瘾
                 </div>
                 <div class="left-tag-item">
@@ -82,13 +85,18 @@
                 </div>
                 <div class="left-tag-item">
                     骑行
-                </div>
+                </div> -->
             </div>
 
 
             <div class="left-div left-time">
                 <ul id="line">
                     <li>
+                        <div class="focus"></div>
+                        <div>2024-03-13</div>
+                        <div>ICP备案审核通过</div>
+                    </li>
+<!--                     <li>
                         <div class="focus"></div>
                         <div>2024-1-27</div>
                         <div>敬请期待</div>
@@ -117,7 +125,7 @@
                         <div class="focus"></div>
                         <div>2018-01-06</div>
                         <div>搭建第一个网站</div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -127,7 +135,7 @@
             <header> <!-- 头部开始 -->
                 <div class="index-logo" style="background-image: url(/static/img/favicon.ico);"><img
                         style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"
-                        src="/static/img/logokuang.png" alt="头像框" title="博主 1月17日 在线"></div>
+                        src="/static/img/logokuang.png" alt="头像框" title="Anka的主页"></div>
                 <div class="welcome">Hello, I'm <span class="gradientText">Zyyo</span></div>
 
                 <div class="description">👦 <span class="purpleText"> Full Stack</span> Developer
@@ -143,7 +151,7 @@
                     <!-- 图标我全部是iconfont找的，可以自行更换 -->
                     <!---->
 
-                    <a class="iconItem" target="_blank" href="https://github.com/ZYYO666">
+                    <a class="iconItem" target="_blank" href="https://github.com/A-n-k-a">
                         <svg t="1704870335945" class="icon" viewBox="0 0 1024 1024" version="1.1"
                             xmlns="http://www.w3.org/2000/svg" p-id="2487" width="22px" height="22px">
                             <path
@@ -154,7 +162,7 @@
                         <div class="iconTip">Github</div>
                     </a>
                     <!---->
-                    <a class="iconItem" target="_blank" href="mailto:i@zyyo.net">
+                    <a class="iconItem" target="_blank" href="anka_luotianyi@outlook.com">
                         <svg t="1704870588438" class="icon" viewBox="0 0 1024 1024" version="1.1"
                             xmlns="http://www.w3.org/2000/svg" p-id="3174" width="22px" height="22px">
                             <path
@@ -163,7 +171,7 @@
                         </svg>
                         <div class="iconTip">Mail</div>
                     </a>
-                    <a class="iconItem" onclick="wx('/static/img/wxzsm.jpg')" href="javascript:void(0)">
+                    <a class="iconItem" onclick="wx('https://convertedpay.pages.dev/')" href="javascript:void(0)">
                         <svg t="1705247464964" class="icon" viewBox="0 0 1024 1024" version="1.1"
                             xmlns="http://www.w3.org/2000/svg" p-id="4987" width="22px" height="22px">
                             <path
@@ -179,7 +187,7 @@
                         <div class="iconTip">赞助</div>
                     </a>
                     <!---->
-                    <a class="iconItem" href="javascript:void(0)" onclick="wx('/static/img/wx.jpg')">
+                    <a class="iconItem" href="javascript:void(0)" onclick="wx('https://convertedpay.pages.dev/')">
                         <svg t="1705322844467" class="icon" viewBox="0 0 1024 1024" version="1.1"
                             xmlns="http://www.w3.org/2000/svg" p-id="2925" width="22px" height="22px">
                             <path fill="#ffffff"
@@ -232,11 +240,11 @@
                 <div class="projectList">
                     <!-- 项目列表开始 -->
                     <!---->
-                    <a class="projectItem a" target="_blank" href="https://blog.zyyo.net">
+                    <a class="projectItem a" target="_blank" href="https://www.immortal-bird.asia">
                         <!-- 项目项开始 -->
                         <div class="projectItemLeft">
-                            <h1>博客</h1>
-                            <p>记录摆烂日常</p>
+                            <h1>测试文章1</h1>
+                            <p>Just an article for test</p>
                         </div>
                         <div class="projectItemRight">
                             <img src="/static/img/i1.png" alt="">
@@ -244,6 +252,7 @@
                         <!-- 项目项结束 -->
                     </a>
                     <!---->
+<!--                     
                     <a class="projectItem a" target="_blank" href="https://i.zyyo.net">
                         <!-- 项目项开始 -->
                         <div class="projectItemLeft">
@@ -281,6 +290,7 @@
                     </a>
                     <!---->
                     <!---->
+                    
                 </div>
                 <div class="title">
                     <svg t="1705257422086" class="icon" viewBox="0 0 1024 1024" version="1.1"
@@ -318,7 +328,7 @@
                         <!-- 项目项结束 -->
                     </a>
                     <!---->
-
+ -->
                 </div>
                 <div class="title">
                     <svg t="1705257823317" class="icon" viewBox="0 0 1024 1024" version="1.1"
@@ -346,8 +356,8 @@
     </div> <!-- main结束 -->
     <!--弹窗-->
     <footer>
-        Zyyo © 2024 |
-        <a href="https://beian.miit.gov.cn/">豫ICP备2023015852号-1</a>
+        Anka © 2024 |
+        <a href="https://beian.miit.gov.cn/">蜀ICP备2024059718号</a>
     </footer>
     <div class="tc">
         <div onclick="" class="tc-main">
