--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Zyyo</title>
-    <link rel="icon" href="/static/img/favicon.ico">
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/47747022?v=4">
     <meta name="description" content="不知大海之宽阔，却知晓天空之蓝( •̀ ω •́ )✧">
     <meta name="keywords" content="Anka的主页">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -33,7 +33,7 @@
 
             <div class="logo" style="background-image: url(/static/img/favicon.ico);"><img
                     style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"
-                    src="/static/img/logokuang.png" alt="头像框" title="Anka的主页"></div>
+                    src="/static/img/logokuang.png" alt="头像框" title="Anka"></div>
 
             <div class="left-div left-des">
                 <div class="left-div-item">
@@ -46,7 +46,7 @@
                             d="M512 39.152941c-216.847059 0-391.529412 174.682353-391.529412 391.529412 0 349.364706 391.529412 572.235294 391.529412 572.235294s391.529412-222.870588 391.529412-572.235294c0-216.847059-174.682353-391.529412-391.529412-391.529412z m0 891.482353C424.658824 873.411765 180.705882 686.682353 180.705882 430.682353c0-183.717647 147.576471-331.294118 331.294118-331.294118s331.294118 147.576471 331.294118 331.294118c0 256-243.952941 442.729412-331.294118 499.952941z"
                             fill="#ffffff" p-id="1480"></path>
                     </svg>
-                    china-henan
+                    China-Sichuan
                 </div>
                 <div class="left-div-item">
                     <svg t="1705773906032" class="icon" viewBox="0 0 1024 1024" version="1.1"
@@ -55,7 +55,7 @@
                             d="M729.6 234.666667H294.4V157.866667a51.2 51.2 0 0 1 51.2-51.2h332.8a51.2 51.2 0 0 1 51.2 51.2v76.8z m179.2 51.2a51.2 51.2 0 0 1 51.2 51.2v512a51.2 51.2 0 0 1-51.2 51.2H115.2a51.2 51.2 0 0 1-51.2-51.2v-512a51.2 51.2 0 0 1 51.2-51.2h793.557333z m-768 172.032c0 16.384 13.312 29.696 29.696 29.696h683.008a29.696 29.696 0 1 0 0-59.392H170.410667a29.696 29.696 0 0 0-29.696 29.696z m252.416 118.784c0 16.384 13.312 29.696 29.696 29.696h178.176a29.696 29.696 0 1 0 0-59.392H422.912a29.738667 29.738667 0 0 0-29.696 29.696z"
                             fill="#ffffff" p-id="2475"></path>
                     </svg>
-                    Sias
+                    CDUT
                 </div>
             </div>
             <div class="left-div left-tag">
@@ -133,18 +133,18 @@
 
 
             <header> <!-- 头部开始 -->
-                <div class="index-logo" style="background-image: url(/static/img/favicon.ico);"><img
+                <div class="index-logo" style="background-image: url(https://avatars.githubusercontent.com/u/47747022?v=4);"><img
                         style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"
                         src="/static/img/logokuang.png" alt="头像框" title="Anka的主页"></div>
-                <div class="welcome">Hello, I'm <span class="gradientText">Zyyo</span></div>
+                <div class="welcome">Hello, I'm <span class="gradientText">Anka</span></div>
 
-                <div class="description">👦 <span class="purpleText"> Full Stack</span> Developer
+                <div class="description"> <span class="purpleText"> 不知大海之宽阔</span> 却知晓天空之蓝
                 </div>
-                <div class="description">📝 The only way to do
+                <div class="description"> ( •̀ ω •́ )✧
 
                     <span class="purpleText textBackground">great</span>
-                    is to
-                    <span class="purpleText textBackground">love</span>what you do .
+                    ( •̀ ω •́ )✧
+                    <span class="purpleText textBackground">( •̀ ω •́ )✧</span>( •̀ ω •́ )✧
                 </div>
                 <div class="iconContainer"> <!-- 图标容器开始 -->
 
@@ -264,6 +264,8 @@
                         </div>
                         <!-- 项目项结束 -->
                     </a>
+                     -->
+<!--                     
                     <!---->
                     <a class="projectItem a" target="_blank" href="https://zyyo.cc">
                         <!-- 项目项开始 -->
@@ -276,6 +278,8 @@
                         </div>
                         <!-- 项目项结束 -->
                     </a>
+                     -->
+<!--                     
                     <!---->
                     <a class="projectItem a" target="_blank" href="https://ai.zyyo.net">
                         <!-- 项目项开始 -->
@@ -288,6 +292,7 @@
                         </div>
                         <!-- 项目项结束 -->
                     </a>
+                     -->
                     <!---->
                     <!---->
                     
@@ -302,6 +307,7 @@
                     ProJect
                 </div>
                 <div class="projectList">
+<!--                     
                     <!-- 项目列表开始 -->
                     <!---->
                     <a class="projectItem b" target="_blank" href="https://xtbbb.com/default/5.html">
@@ -315,6 +321,8 @@
                         </div>
                         <!-- 项目项结束 -->
                     </a>
+                     -->
+<!--                     
                     <!---->
                     <a class="projectItem b" target="_blank" href="https://xtbbb.com/default/10.html">
                         <!-- 项目项开始 -->
@@ -327,8 +335,9 @@
                         </div>
                         <!-- 项目项结束 -->
                     </a>
+                     -->
                     <!---->
- -->
+
                 </div>
                 <div class="title">
                     <svg t="1705257823317" class="icon" viewBox="0 0 1024 1024" version="1.1"
