--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head class="zyyo.net">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Zyyo</title>
+    <title>Anka的主页</title>
     <link rel="icon" href="https://avatars.githubusercontent.com/u/47747022?v=4">
     <meta name="description" content="不知大海之宽阔，却知晓天空之蓝( •̀ ω •́ )✧">
     <meta name="keywords" content="Anka的主页">
@@ -31,7 +31,7 @@
         <div onclick="left()" class="zyyo-left">
 
 
-            <div class="logo" style="background-image: url(/static/img/favicon.ico);"><img
+            <div class="logo" style="background-image: url(https://avatars.githubusercontent.com/u/47747022?v=4);"><img
                     style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"
                     src="/static/img/logokuang.png" alt="头像框" title="Anka"></div>
 
@@ -140,11 +140,11 @@
 
                 <div class="description"> <span class="purpleText"> 不知大海之宽阔</span> 却知晓天空之蓝
                 </div>
-                <div class="description"> ( •̀ ω •́ )✧
+                <div class="description"> ( •̀ ω •́ )✧ 
 
-                    <span class="purpleText textBackground">great</span>
+                    <span class="purpleText textBackground"> ( •̀ ω •́ )✧ </span>
                     ( •̀ ω •́ )✧
-                    <span class="purpleText textBackground">( •̀ ω •́ )✧</span>( •̀ ω •́ )✧
+                    <span class="purpleText textBackground"> ( •̀ ω •́ )✧ </span> ( •̀ ω •́ )✧ 
                 </div>
                 <div class="iconContainer"> <!-- 图标容器开始 -->
 
@@ -169,7 +169,7 @@
                                 d="M926.47619 355.644952V780.190476a73.142857 73.142857 0 0 1-73.142857 73.142857H170.666667a73.142857 73.142857 0 0 1-73.142857-73.142857V355.644952l304.103619 257.828572a170.666667 170.666667 0 0 0 220.745142 0L926.47619 355.644952zM853.333333 170.666667a74.044952 74.044952 0 0 1 26.087619 4.778666 72.704 72.704 0 0 1 30.622477 22.186667 73.508571 73.508571 0 0 1 10.678857 17.67619c3.169524 7.509333 5.12 15.652571 5.607619 24.210286L926.47619 243.809524v24.380952L559.469714 581.241905a73.142857 73.142857 0 0 1-91.306666 2.901333l-3.632762-2.925714L97.52381 268.190476v-24.380952a72.899048 72.899048 0 0 1 40.155428-65.292191A72.97219 72.97219 0 0 1 170.666667 170.666667h682.666666z"
                                 fill="#ffffff" p-id="3175"></path>
                         </svg>
-                        <div class="iconTip">Mail</div>
+                        <div class="iconTip">E-mail</div>
                     </a>
                     <a class="iconItem" onclick="wx('https://convertedpay.pages.dev/')" href="javascript:void(0)">
                         <svg t="1705247464964" class="icon" viewBox="0 0 1024 1024" version="1.1"
@@ -184,7 +184,7 @@
                                 d="M683.431724 427.431724v-70.62069h-38.311724l30.190345-30.190344-49.964138-49.964138-62.49931 62.49931h-6.002759L494.344828 276.656552l-49.787587 49.964138 30.013793 30.190344h-38.311724v70.62069h88.275862v35.310345h-88.275862v70.62069h88.275862v52.965517h70.62069v-52.965517h88.275862v-70.62069h-88.275862v-35.310345z"
                                 fill="#ffffff" p-id="4990"></path>
                         </svg>
-                        <div class="iconTip">赞助</div>
+                        <div class="iconTip">Buy Me a Coffee☕️</div>
                     </a>
                     <!---->
                     <a class="iconItem" href="javascript:void(0)" onclick="wx('https://convertedpay.pages.dev/')">
@@ -200,7 +200,7 @@
                                 d="M385.221572 377.38714c-27.757181 0.205685-48.88743 23.684422-46.821375 52.023864 1.940189 26.610054 23.154349 44.910862 50.212612 43.317575 26.505677-1.560542 46.149063-22.886243 45.152363-49.02046C432.798147 398.345474 410.636405 377.198851 385.221572 377.38714z"
                                 p-id="2928"></path>
                         </svg>
-                        <div class="iconTip">微信</div>
+                        <div class="iconTip">WeChat</div>
                     </a>
 
                     <!---->
@@ -252,47 +252,41 @@
                         <!-- 项目项结束 -->
                     </a>
                     <!---->
-<!--                     
-                    <a class="projectItem a" target="_blank" href="https://i.zyyo.net">
+<!--                     <a class="projectItem a" target="_blank" href="https://i.zyyo.net"> -->
                         <!-- 项目项开始 -->
-                        <div class="projectItemLeft">
+<!--                         <div class="projectItemLeft">
                             <h1>云盘</h1>
                             <p>存储收集文件</p>
                         </div>
                         <div class="projectItemRight">
                             <img src="/static/img/i2.png" alt="">
-                        </div>
+                        </div> -->
                         <!-- 项目项结束 -->
-                    </a>
-                     -->
-<!--                     
+<!--                     </a> -->
                     <!---->
-                    <a class="projectItem a" target="_blank" href="https://zyyo.cc">
+<!--                     <a class="projectItem a" target="_blank" href="https://zyyo.cc"> -->
                         <!-- 项目项开始 -->
-                        <div class="projectItemLeft">
+<!--                         <div class="projectItemLeft">
                             <h1>实验室</h1>
                             <p>放置有趣网页</p>
                         </div>
                         <div class="projectItemRight">
                             <img src="/static/img/i3.png" alt="">
-                        </div>
+                        </div> -->
                         <!-- 项目项结束 -->
-                    </a>
-                     -->
-<!--                     
+<!--                     </a> -->
                     <!---->
-                    <a class="projectItem a" target="_blank" href="https://ai.zyyo.net">
+<!--                     <a class="projectItem a" target="_blank" href="https://ai.zyyo.net"> -->
                         <!-- 项目项开始 -->
-                        <div class="projectItemLeft">
+<!--                         <div class="projectItemLeft">
                             <h1>GPT</h1>
                             <p>chatgpt next web</p>
                         </div>
                         <div class="projectItemRight">
                             <img src="/static/img/i4.png" alt="">
-                        </div>
+                        </div> -->
                         <!-- 项目项结束 -->
-                    </a>
-                     -->
+<!--                     </a> -->
                     <!---->
                     <!---->
                     
@@ -307,35 +301,31 @@
                     ProJect
                 </div>
                 <div class="projectList">
-<!--                     
                     <!-- 项目列表开始 -->
                     <!---->
-                    <a class="projectItem b" target="_blank" href="https://xtbbb.com/default/5.html">
+<!--                     <a class="projectItem b" target="_blank" href="https://xtbbb.com/default/5.html"> -->
                         <!-- 项目项开始 -->
-                        <div class="projectItemLeft">
+<!--                         <div class="projectItemLeft">
                             <h1>ZYYO主题</h1>
                             <p>为我个人设计的ty主题</p>
                         </div>
                         <div class="projectItemRight">
                             <img src="/static/img/i5.png" alt="">
-                        </div>
+                        </div> -->
                         <!-- 项目项结束 -->
-                    </a>
-                     -->
-<!--                     
+<!--                     </a> -->
                     <!---->
-                    <a class="projectItem b" target="_blank" href="https://xtbbb.com/default/10.html">
+<!--                     <a class="projectItem b" target="_blank" href="https://xtbbb.com/default/10.html"> -->
                         <!-- 项目项开始 -->
-                        <div class="projectItemLeft">
+<!--                         <div class="projectItemLeft">
                             <h1>ZYYO主页1.0</h1>
                             <p>一款简约的个人主页</p>
                         </div>
                         <div class="projectItemRight">
                             <img src="/static/img/i6.png" alt="">
-                        </div>
+                        </div> -->
                         <!-- 项目项结束 -->
-                    </a>
-                     -->
+<!--                     </a> -->
                     <!---->
 
                 </div>
