--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         </svg>
                         <div class="iconTip">E-mail</div>
                     </a>
-                    <a class="iconItem" onclick="wx('https://convertedpay.pages.dev/')" href="javascript:void(0)">
+                    <a class="iconItem" onclick="wx('https://convertedpay.pages.dev/')" href="https://convertedpay.pages.dev/">
                         <svg t="1705247464964" class="icon" viewBox="0 0 1024 1024" version="1.1"
                             xmlns="http://www.w3.org/2000/svg" p-id="4987" width="22px" height="22px">
                             <path
@@ -184,7 +184,7 @@
                                 d="M683.431724 427.431724v-70.62069h-38.311724l30.190345-30.190344-49.964138-49.964138-62.49931 62.49931h-6.002759L494.344828 276.656552l-49.787587 49.964138 30.013793 30.190344h-38.311724v70.62069h88.275862v35.310345h-88.275862v70.62069h88.275862v52.965517h70.62069v-52.965517h88.275862v-70.62069h-88.275862v-35.310345z"
                                 fill="#ffffff" p-id="4990"></path>
                         </svg>
-                        <div class="iconTip">Buy Me a Coffee☕️</div>
+                        <div class="iconTip">Sponsor</div>
                     </a>
                     <!---->
                     <a class="iconItem" href="javascript:void(0)" onclick="wx('https://convertedpay.pages.dev/')">
