Update hitokoto's logic

--- a/index.html
+++ b/index.html
@@ -138,15 +138,18 @@
                         src="/static/img/logokuang.png" alt="头像框" title="Anka的主页"></div>
                 <div class="welcome">Hello, I'm <span class="gradientText">Anka</span></div>
 
-                <div class="description"> <span class="purpleText">『</span> ${hitokoto} <span class="purpleText">』</span>
+                <div class="description"> <span class="purpleText">『</span> <p id="hitokoto_p"></p> <span class="purpleText">』</span>
                 </div>
+<!--                 
                 <div class="description"> ——
 
-                    <span class="purpleText textBackground"> ${hito_fromWho} </span>
+                    <span class="purpleText textBackground"> <p id="fromWho_p"></p> </span>
                     「
-                    <span class="purpleText textBackground"> ${hito_from} </span> 」
+                    <span class="purpleText textBackground"> <p id="from_p"></p> </span> 」
                 </div>
-                <a href="https://hitokoto.cn/?uuid=${hito_uuid}" id="hitokoto_text">一言来自：hitokoto.cn</a>
+                 -->
+                <p id="fromWho_from"></p>
+                <a href="https://hitokoto.cn" id="hitokoto_redirect">一言来自：hitokoto.cn</a>
                 <div class="iconContainer"> <!-- 图标容器开始 -->
 
                     <!-- 图标我全部是iconfont找的，可以自行更换 -->
@@ -397,14 +400,35 @@
 
             // 在页面上展示 API 返回的值
             hitokotoDiv.innerHTML = `<p>『${data.hitokoto}』<br>——${data.from_who}「${data.from}」</p>`;
+            document.getElementById("hitokoto_p").innerHTML = `<p>${data.hitokoto}`;
+            document.getElementById("fromWho_from").innerHTML = 
+                `
+                    <div class="description"> ——
+                        <span class="purpleText textBackground"> ${data.from_who} </span>「<span class="purpleText textBackground"> ${data.from} </span> 」
+                    </div>
+                    `;
+            document.getElementById("hitokoto_redirect").href = `https://hitokoto.cn/?uuid=${data.uuid}`
             if (data.from_who == null){
                 hitokotoDiv.innerHTML = `<p>『${data.hitokoto}』<br>——「${data.from}」</p>`;
+                document.getElementById("fromWho_from").innerHTML = 
+                    `
+                        <div class="description"> ——
+                            <span class="purpleText textBackground"></span>「<span class="purpleText textBackground"> ${data.from} </span> 」
+                        </div>
+                        `;
             }
             if (data.from == null){
                 hitokotoDiv.innerHTML = `<p>『${data.hitokoto}』<br>——${data.from_who}</p>`;
+                document.getElementById("fromWho_from").innerHTML = 
+                    `
+                        <div class="description"> ——
+                            <span class="purpleText textBackground"> ${data.from_who} </span>
+                        </div>
+                        `;
             }
             if (data.from_who == null && data.from == null){
                 hitokotoDiv.innerHTML = `<p>『${data.hitokoto}』</p>`;
+                document.getElementById("fromWho_from").innerHTML = ``;
             }
         })
         .catch(error => console.error('Error fetching hitokoto:', error));
