--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         src="/static/img/logokuang.png" alt="头像框" title="Anka的主页"></div>
                 <div class="welcome">Hello, I'm <span class="gradientText">Anka</span></div>
 
-                <div class="description"> <span class="purpleText">『</span> <div id="hitokoto_p">:D 一言获取中...</div> <span class="purpleText">』</span>
+                <div class="description"> <span class="purpleText">『</span><p id="hitokoto_p">:D 一言获取中...</p><span class="purpleText">』</span>
                 </div>
 <!--                 
                 <div class="description"> ——
@@ -148,7 +148,7 @@
                     <span class="purpleText textBackground"> <p id="from_p"></p> </span> 」
                 </div>
                  -->
-                <div id="fromWho_from">作者/来源获取中...</div>
+                <p id="fromWho_from">作者/来源获取中...</p>
                 <a href="https://hitokoto.cn" id="hitokoto_redirect">一言来自：hitokoto.cn</a>
                 <div class="iconContainer"> <!-- 图标容器开始 -->
 
