--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="index-logo" style="background-image: url(https://avatars.githubusercontent.com/u/47747022?v=4);"><img
                         style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"
                         src="/static/img/logokuang.png" alt="头像框" title="Anka的主页"></div>
-                <div class="welcome">Hello, I'm <span class="gradientText">Anka</span></div>
+                <div class="welcome">Hi, I'm <span class="gradientText">Anka</span></div>
 
                 <div id="hitokoto_div">:D 一言获取中...</div>
 <!--                 
@@ -165,7 +165,7 @@
                         <div class="iconTip">Github</div>
                     </a>
                     <!---->
-                    <a class="iconItem" target="_blank" href="anka_luotianyi@outlook.com">
+                    <a class="iconItem" target="_blank" href="mailto:3062969285@qq.com">
                         <svg t="1704870588438" class="icon" viewBox="0 0 1024 1024" version="1.1"
                             xmlns="http://www.w3.org/2000/svg" p-id="3174" width="22px" height="22px">
                             <path
