Update website icon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Anka的主页</title>
-    <link rel="icon" href="https://avatars.githubusercontent.com/u/47747022?v=4">
+    <link rel="icon" href="https://www.loliapi.com/acg/pp/">
     <meta name="description" content="不知大海之宽阔，却知晓天空之蓝( •̀ ω •́ )✧">
     <meta name="keywords" content="Anka的主页">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
