--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
                  -->
                 <div id="fromWho_from">作者/来源获取中...</div>
-                <a href="https://hitokoto.cn" id="hitokoto_redirect" style="{cursor: `url('static/other/millennium_link.cur'), auto`}">一言来自：hitokoto.cn</a>
+                <a href="https://hitokoto.cn" id="hitokoto_redirect">一言来自：hitokoto.cn</a>
                 <div class="iconContainer"> <!-- 图标容器开始 -->
 
                     <!-- 图标我全部是iconfont找的，可以自行更换 -->
@@ -359,7 +359,7 @@
     <!--弹窗-->
     <footer>
         Anka © 2024 |
-        <a href="https://beian.miit.gov.cn/" style="{cursor: `url('static/other/millennium_link.cur'), auto`}">蜀ICP备2024059718号</a>
+        <a href="https://beian.miit.gov.cn/">蜀ICP备2024059718号</a>
     </footer>
     <div class="tc">
         <div onclick="" class="tc-main">
@@ -400,16 +400,16 @@
             // 在页面上展示 API 返回的值
             // hitokotoDiv.innerHTML = `<p>『${data.hitokoto}』<br>——${data.from_who}「${data.from}」</p>`;
             document.getElementById("hitokoto_div").innerHTML = `<p><div class="description"><span class="purpleText">『</span>${data.hitokoto}<span class="purpleText">』</span></div></p>`;
-            document.getElementById("fromWho_from").innerHTML = `<p>——<span onclick="window.location.href='https://www.baidu.com/s?word=${data.from_who}';" class="purpleText textBackground" style="{cursor: `url('static/other/millennium_link.cur'), auto`}"> ${data.from_who} </span>「<span onclick="window.location.href='https://www.baidu.com/s?word=${data.from}';" class="purpleText textBackground" style="{cursor: `url('static/other/millennium_link.cur'), auto`}"> ${data.from} </span> 」</p>`;
+            document.getElementById("fromWho_from").innerHTML = `<p>——<span onclick="window.location.href='https://www.baidu.com/s?word=${data.from_who}';" class="purpleText textBackground"> ${data.from_who} </span>「<span onclick="window.location.href='https://www.baidu.com/s?word=${data.from}';" class="purpleText textBackground" style="{cursor: `url('static/other/millennium_link.cur'), auto`}"> ${data.from} </span> 」</p>`;
             document.querySelector('#hitokoto_redirect').href = `https://hitokoto.cn/?uuid=${data.uuid}`
             // document.getElementById("hitokoto_redirect").href = `https://hitokoto.cn/?uuid=${data.uuid}`
             if (data.from_who == null){
                 // hitokotoDiv.innerHTML = `<p>『${data.hitokoto}』<br>——「${data.from}」</p>`;
-                document.getElementById("fromWho_from").innerHTML = `<p>——「<span onclick="window.location.href='https://www.baidu.com/s?word=${data.from}';" class="purpleText textBackground" style="{cursor: `url('static/other/millennium_link.cur'), auto`}"> ${data.from} </span> 」</p>`;
+                document.getElementById("fromWho_from").innerHTML = `<p>——「<span onclick="window.location.href='https://www.baidu.com/s?word=${data.from}';" class="purpleText textBackground"> ${data.from} </span> 」</p>`;
             }
             if (data.from == null){
                 // hitokotoDiv.innerHTML = `<p>『${data.hitokoto}』<br>——${data.from_who}</p>`;
-                document.getElementById("fromWho_from").innerHTML = `<p>——<span onclick="window.location.href='https://www.baidu.com/s?word=${data.from_who}';" class="purpleText textBackground" style="{cursor: `url('static/other/millennium_link.cur'), auto`}"> ${data.from_who} </span></p>`;
+                document.getElementById("fromWho_from").innerHTML = `<p>——<span onclick="window.location.href='https://www.baidu.com/s?word=${data.from_who}';" class="purpleText textBackground"> ${data.from_who} </span></p>`;
             }
             if (data.from_who == null && data.from == null){
                 // hitokotoDiv.innerHTML = `<p>『${data.hitokoto}』</p>`;
