--- a/index.html
+++ b/index.html
@@ -358,8 +358,9 @@
     </div> <!-- main结束 -->
     <!--弹窗-->
     <footer>
-        <a href=${originurl}>Anka</a> © 2024 - ${currentyear} |
-        <a href="https://beian.miit.gov.cn/">蜀ICP备2024059718号</a>
+        <div id="foooter">Anka © 2024 | <a href="https://beian.miit.gov.cn/">蜀ICP备2024059718号</a></div>
+<!--         <a href=${originurl}>Anka</a> © 2024 - ${currentyear} |
+        <a href="https://beian.miit.gov.cn/">蜀ICP备2024059718号</a> -->
     </footer>
     <div class="tc">
         <div onclick="" class="tc-main">
@@ -382,6 +383,7 @@
     // 获取当前年份
     var datedate = new Date();
     var currentyear = datedate.getFullYear();
+    document.getElementById("foooter").innerHTML = `<a href=${originurl}>Anka</a> © 2024 - ${currentyear} | <a href="https://beian.miit.gov.cn/">蜀ICP备2024059718号</a>`
 </script>
 <script>
     // 请求 Hitokoto API
