回滚新增项目项

--- a/index.html
+++ b/index.html
@@ -255,15 +255,15 @@
                         <!-- 项目项结束 -->
                     </a>
                     <!---->
-                    <a class="projectItem a" target="_blank" href="https://www.anka1.top">
+<!--                     <a class="projectItem a" target="_blank" href="https://www.anka1.top"> -->
                         <!-- 项目项开始 -->
-                        <div class="projectItemLeft">
+<!--                         <div class="projectItemLeft">
                             <h1>新版主页</h1>
                             <p>视觉及功能焕新升级，欢迎来访～</p>
                         </div>
                         <div class="projectItemRight">
                             <img src="/static/img/主页房子家.svg" alt="">
-                        </div>
+                        </div> -->
                         <!-- 项目项结束 -->
 <!--                     </a> -->
                     <!---->
