重新更新项目

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
                 <ul id="line">
                     <li>
                         <div class="focus"></div>
-                        <div>2024-03-13</div>
-                        <div>ICP备案审核通过</div>
+                        <div>2025-3-25</div>
+                        <div>开设全新主页</div>
                     </li>
                     <li>
                         <div class="focus"></div>
-                        <div>2025-3-25</div>
-                        <div>开设新站</div>
+                        <div>2024-03-13</div>
+                        <div>ICP备案审核通过</div>
                     </li>
 <!--                     <li>
                         <div class="focus"></div>
@@ -255,15 +255,15 @@
                         <!-- 项目项结束 -->
                     </a>
                     <!---->
-<!--                     <a class="projectItem a" target="_blank" href="https://www.anka1.top"> -->
+                    <a class="projectItem a" target="_blank" href="https://www.anka1.top">
                         <!-- 项目项开始 -->
-<!--                         <div class="projectItemLeft">
+                        <div class="projectItemLeft">
                             <h1>新版主页</h1>
                             <p>视觉及功能焕新升级，欢迎来访～</p>
                         </div>
                         <div class="projectItemRight">
-                            <img src="/static/img/主页房子家.svg" alt="">
-                        </div> -->
+                            <img src="/static/img/主页房子家.png" alt="">
+                        </div>
                         <!-- 项目项结束 -->
 <!--                     </a> -->
                     <!---->
